applications/kratos-selfservice-ui-node/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-selfservice-ui-node
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 60
      containers:
        - name: kratos-selfservice-ui-node
          image: oryd/kratos-selfservice-ui-node
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/alive
              port: http
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsNonRoot: true
            runAsUser: 10000
            seLinuxOptions:
              level: s0:c123,c456
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: home
              mountPath: /home/ory
      securityContext:
        fsGroup: 10000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 10000
        runAsNonRoot: true
        runAsUser: 10000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: home
          emptyDir: {}
