applications/kratos-selfservice-ui-node/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kratos-selfservice-ui-node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
